fix: horizontal scroll

--- a/src/pages/workoutPage/workoutPage.module.scss
+++ b/src/pages/workoutPage/workoutPage.module.scss
@@ -20,6 +20,7 @@
   max-width: 1160px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 .navigation {
@@ -168,12 +169,9 @@
     text-align: center;
   }
   .video {
-    margin: 0 auto;
-    padding-left: 10px;
-    margin-top: 40px;
-    max-width: 420px;
+    max-width: 100%;
     height: 260px;
-    margin-bottom: 75px;
+    margin: 40px auto 75px;
   }
   .description {
     display: flex;
@@ -182,10 +180,12 @@
 
   .progress {
     max-width: 420px;
+
     &Item {
       align-items: center;
       max-width: 410px;
     }
+
     &Text {
       width: 200px;
     }
